fixed bug sponsor logo being too small on mobile

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -94,7 +94,7 @@ body {
 }
 
 .sponsor-logo-container {
-  flex: 1 1 45%; 
+  display:flex; 
   max-width: 180px;
   padding: 10px;
 }
